2021-04-07  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-newsitem-mode.el (gentoo-newsitem-mode): Make easymenu
	work with XEmacs.

	* ebuild-mode.el (ebuild-mode): Fix byte-compile warning in
	Emacs 28.

2021-03-20  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.52 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode.el (ebuild-mode-delete-cvs-line): Change default
	to nil.

2021-03-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el: Fix byte-compile warnings.
	(ebuild-mode-make-keywords-list): Test if delete-duplicates
	is bound.
	(ebuild-repo-mode): Use write-contents-functions for GNU Emacs.
	* glep-mode.el (glep-mode): Fix byte-compile warning. We don't
	support XEmacs anyway for its missing rst-mode, so we can use
	write-contents-functions as well.

	* ebuild-mode.el (ebuild-repo-mode): New minor mode for editing
	files in an ebuild repository.
	(ebuild-repo-mode-before-save): New function.
	(ebuild-repo-mode-maybe-enable, find-file-hook):
	Enable ebuild-repo-mode when the file is in an ebuild repository.
	(ebuild-mode): Enable ebuild-repo-mode instead of setting up
	write-contents-hooks ourselves.
	(ebuild-mode-before-save): Function removed.

2021-03-05  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh: The eclass directory can now be specified
	with the ECLASSDIR variable. Better error checking and reporting.
	* Makefile (keywords): New target.

	* devbook-mode.el: Add "wp" and "XML" to package keywords.
	* gentoo-newsitem-mode.el: Change package keywords to "wp".
	* glep-mode.el: Ditto.

2020-07-21  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.51 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2020-04-26  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-list): Update default list of
	architectures.
	(ebuild-mode-arch-stable-list): Try to read arches.desc first.

2020-03-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.50 released.
