@@ -1,5 +1,10 @@
 2021-04-07  Ulrich Müller  <ulm@gentoo.org>
 
+	* gentoo-newsitem-mode.el (gentoo-newsitem-mode-menu): Declare.
+	This fixes a byte-compile warning in XEmacs.
+	* ebuild-mode.el (ebuild-repo-mode-hook)
+	(ebuild-repo-mode-on-hook, ebuild-repo-mode-off-hook): Ditto.
+
 	* gentoo-newsitem-mode.el (gentoo-newsitem-mode): Make easymenu
 	work with XEmacs.
 
